4.4.9 -> 4.5:
	- jbj: backport assorted rpmio changes from HEAD to stay in sync.
	- jbj: make sure the open path is set when using [bgl]zdOpen vector too.
	- jbj: lzdio: rework the layering to be more similar to gzdio/bzdio.
	- jbj: rpmrepo: fix: --lzma segfault, lzdFdopen was not saving path.
	- jbj: splint: annotate argvAppend differently.
	- jbj: add _fdopen to FDIO_t, expose fdbg(), make lzdio.c standalone.
	- jbj: expose XfdLink/XfdFree/XfdNew, nuke the FDIO_t vectors.
	- jbj: eliminate unused FDIO_t vectors. XfdLink/XfdFree/XfdNew need nuking.
	- jbj: create lzdio.c to carry lzma comprssion, possibly w dlopen().
	- jbj: add --enable-build-gcov for CFLAGS -fprofile-arcs -ftest-coverage.
	- jbj: retrofit LCOV/GCOV same as other branches.
	- jbj: retrofit "make check" same as other branches.
	- jbj: rpmrepo: backport --yum:primary.xml et al popt aliases.
	- jbj: rpmrepo: add baseurl to the repo markup.
	- jbj: upgrade to db-4.7.25.
	- jbj: rpmrepo: populate sqlite schema with PACKAGESIZE and PACKAGEDIGEST.
	- jbj: rpmrepo: compute digests for both compressed & uncompressed
	       repository markup components.
	- jbj: retrofit additional ARGV_t argument through header formats.
	- jbj: retrofit RPM_UINT*_TYPE as defines.
	- jbj: add RPMTAG_PACKAGESIZE, with header tag extensions based on statbuf.
	- jbj: backport headerGet{Digest,Statbuf}, nuke headerGetTime.
	- glen: add mimetype(foo/bar) deps autogeneration (by Marcin Banasiak)
	- glen: add scripts/hrmib-cache to fill initial hrmib export to /var/cache/hrmib
	- jbj: configure: don't expand non-existent scripts/perl.{prov,req}.in.
	- jbj: rpmrepo: backport the remaining popt --queryformat aliases.
	- jbj: rpmrepo: populate the header internal values.
	- jbj: rpmrepo: functional --yum:primary.xml (w incorrect values).
	- jbj: rpmrepo: backport more header extension tags/formats.
	- jbj: rpmrepo: backport :bncdata, :cdata, :utf8 header format extensions.